Updated portfolio with latest design and code changes

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     <p>If you would like to get in touch, feel free to reach me through the following:</p>
     <ul>
         <li>Email: <a href="mailto:rmagenthar@gmail.com">rmagenthar@gmail.com</a></li>
-        <li>Phone: +91 123 456 7890</li>
+        <li>Phone: +91 8610238802 </li>
         <li>LinkedIn: <a href="https://www.linkedin.com/in/magenthar" target="_blank">Magenthar R</a></li>
     </ul>
 </section>
